--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-vcf = "0.5.0"
-flate2 = "1.0.22"
+rust-htslib = { version = "*", default-features = false }
