--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 rust-htslib = { version = "*", default-features = false }
 indicatif = {version = "*"}
 rayon = {version = "*"}
+clap = "2.33.3"
